--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.1",
+		"@nextui-org/avatar": "^2.2.4",
 		"@nextui-org/button": "2.2.3",
 		"@nextui-org/card": "^2.2.7",
 		"@nextui-org/code": "2.2.3",
+		"@nextui-org/dropdown": "^2.3.7",
 		"@nextui-org/form": "^2.1.6",
 		"@nextui-org/input": "2.4.3",
 		"@nextui-org/kbd": "2.2.3",
@@ -26,17 +29,29 @@
 		"@nextui-org/theme": "2.4.1",
 		"@react-aria/ssr": "3.9.7",
 		"@react-aria/visually-hidden": "3.8.18",
+		"@reduxjs/toolkit": "^2.5.0",
+		"@tanstack/react-query": "^5.62.7",
+		"axios": "^1.7.9",
 		"clsx": "2.1.1",
 		"framer-motion": "11.13.1",
 		"intl-messageformat": "^10.5.0",
+		"js-cookie": "^3.0.5",
+		"jwt-decode": "^4.0.0",
 		"next": "15.0.4",
 		"next-themes": "^0.4.4",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-hook-form": "^7.54.1",
+		"react-icons": "^5.4.0",
+		"react-redux": "^9.2.0",
+		"redux-persist": "^6.0.0",
+		"sonner": "^1.7.1",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@next/eslint-plugin-next": "15.0.4",
 		"@react-types/shared": "3.25.0",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
@@ -49,12 +64,10 @@
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "5.2.1",
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "4.1.4",
 		"postcss": "8.4.49",
-		"prettier": "3.3.3",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.16",
 		"typescript": "5.6.3"
