--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.18",
     "@reduxjs/toolkit": "^2.5.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.3.0",
     "@tanstack/react-query": "^5.62.7",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "^10.5.0",
@@ -47,6 +50,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.1",
+    "sweetalert2": "^11.15.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
