--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
+    "@heroui/modal": "^2.2.8",
+    "@heroui/react": "^2.6.14",
     "@hookform/resolvers": "^3.9.1",
     "@nextui-org/avatar": "^2.2.4",
     "@nextui-org/button": "2.2.3",
@@ -48,6 +50,7 @@
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.9.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.1",
     "sweetalert2": "^11.15.2",
