--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.3.0",
-    "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query": "^5.67.2",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
@@ -43,6 +43,7 @@
     "intl-messageformat": "^10.5.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.475.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "18.3.1",
